[tool.poetry]
name = "rcon"
version = "0.1.0"
description = "An asynchronous library for the RCON protocol"
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
